# quantum-flux-simulator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.2.0.md  ROADMAP.md
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/dataset/: crypto_heavy.py  general_light.py  ml_heavy.py  numerical_heavy.py
benchmarks/semi_real/: README.md  crypto_service.py  general_pipeline.py  labels.json  ml_training_loop.py  numerical_solver.py
datasets/seeded_defects/: crypto_seeded_defect.py  general_seeded_defect.py  labels.json  ml_seeded_defect.py  (+1 more)
examples/: ml_stub.py  my_crypto.py  navier_stub.py
external_baselines/: run-radon-benchmark.ps1  run-semgrep-benchmark.ps1
scripts/: release-check.ps1  verify.ps1
src/: lib.rs  main.rs
tests/: ablation_smoke.rs  analysis_cases.rs  batch_smoke.rs  benchmark_smoke.rs  claims_and_labels_smoke.rs  classification_language_signal_smoke.rs  cli_smoke.rs  consolidated_external_ingest_smoke.rs  consolidated_semgrep_ingest_smoke.rs  consolidated_smoke.rs  effective_equations_doc_smoke.rs  effective_equations_numerics.rs  external_baseline_files.rs  external_semgrep_files.rs  json_smoke.rs  parser_evolution_doc_smoke.rs  physics_formalism.rs  physics_invariants.rs  physics_regime_sweep_smoke.rs  physics_traceability_smoke.rs  png_smoke.rs  reproduce_smoke.rs  reproducibility.rs  seeded_defects_benchmark_smoke.rs  seeded_defects_consistency_smoke.rs  seeded_defects_contract_smoke.rs  seeded_defects_smoke.rs  semi_real_corpus_smoke.rs  typescript_support_smoke.rs
(+41 files in other folders)
