[package]
name = "flux-sim"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Quantum Flux Simulator CLI in Rust"
repository = "https://github.com/USER/quantum-flux-simulator"
readme = "README.md"

[[bin]]
name = "flux-sim"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true