[package]
name = "flux-sim"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Physics-inspired research tool for reproducible code analysis with an effective state model"
repository = "https://github.com/crasofuentes-hub/quantum-flux-simulator"
readme = "README.md"
keywords = ["research", "code-analysis", "physics-inspired", "reproducible", "cli"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "flux-sim"
path = "src/main.rs"

[dependencies]
num-complex = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true